--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+  email_validator: ^2.1.17
+
+  # Firebase Core
+  firebase_core: ^2.4.1
+  # Firebase Database
+  cloud_firestore: ^4.3.1
+  # Firebase Autherization
+  firebase_auth: ^4.2.5
 
 dev_dependencies:
   flutter_test:
