--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: NTUFoodMap
+name: ntu_food_map
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
