--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   # Firebase Autherization
   firebase_auth: ^4.2.5
+  flutter_map: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+# favicon
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/favicon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
