--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   # Firebase Autherization
   firebase_auth: ^4.2.5
   flutter_map: ^3.1.0
+  location: ^4.4.0
+  syncfusion_flutter_maps: ^20.4.44
+  latlong2: ^0.8.1
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
