--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,15 @@ dependencies:
   cloud_firestore: ^4.3.1
   # Firebase Autherization
   firebase_auth: ^4.2.5
+  # Map & GPS
   flutter_map: ^3.1.0
   location: ^4.4.0
   syncfusion_flutter_maps: ^20.4.44
   latlong2: ^0.8.1
+  # Toast
   fluttertoast: ^8.1.2
+  image_picker: ^0.8.6+1
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
