complete contributor's & owner's edit interface

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ntu_food_map">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="ntu_food_map"
         android:name="${applicationName}"
