--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,10 @@ dependencies:
 
   # Firebase Core
   firebase_core: ^2.4.1
-  # Firebase Database
-  cloud_firestore: ^4.3.1
   # Firebase Autherization
   firebase_auth: ^4.2.5
+  # Firebase Database
+  cloud_firestore: ^4.3.1
   # Map & GPS
   flutter_map: ^3.1.0
   location: ^4.4.0
@@ -53,6 +53,9 @@ dependencies:
   fluttertoast: ^8.1.2
   image_picker: ^0.8.6+1
   path_provider: ^2.0.12
+  # UUID
+  uuid: ^3.0.7
+  firebase_storage: ^11.0.10
 
 dev_dependencies:
   flutter_test:
